# dj_toolkit

./: pyproject.toml
dj_toolkit/: db.sqlite3
dj_toolkit/apps/message_sender/: apps.py  urls.py  views.py
dj_toolkit/apps/message_sender/templates/: message_sender.html
dj_toolkit/project/: settings.py  urls.py
dj_toolkit/templates/: base.html  home.html
